# torch

./: .gitignore  CHANGES.md  LICENSE.md  LICENSE_NOTES  README.md  internals.md  rc_tutorial.md  torch.opam
examples/basics/: basics.ml  dune
examples/char_rnn/: README.md  char_rnn.ml  dune
examples/cifar/: README.md  cifar_train.ml  densenet.ml  dune  fast_resnet.ml  preact_resnet.ml  resnet.ml
examples/gan/: README.md  began.ml  dune  gan_stability.ml  mnist_cgan.ml  mnist_dcgan.ml  mnist_gan.ml  progressive_growing_gan.ml  relativistic_dcgan.ml
examples/jit/: README.md  dune  load_and_run.ml
examples/llama2/: README.md  dune  llama2.ml
examples/min-gpt/: dune  mingpt.ml
examples/mnist/: README.md  conv.ml  dune  linear.ml  nn.ml
examples/neural_transfer/: README.md  dune  neural_transfer.ml
examples/pretrained/: README.md  dune  finetuning.ml  predict.ml
examples/refcounted/llama2/: README.md  dune  llama2.ml
examples/reinforcement-learning/: README.md  a2c.ml  atari_wrappers.py  dqn.ml  dqn_atari.ml  dqn_pong.ml  dune  env_gym_pyml.ml  policy_gradient.ml  ppo.ml  rollout.ml  rollout.mli  vec_env_gym_pyml.ml
examples/translation/: dataset.ml  dataset.mli  dune  lang.ml  lang.mli  seq2seq.ml
examples/vae/: dune  vae.ml
examples/yolo/: coco_names.ml  darknet.ml  dune  yolo.ml
images/: codegen_graph.dot
jupyter/: mnist-nn.ipynb
src/bindings/: dune  torch_bindings.ml  torch_bindings_generated.ml  type_defs.ml  type_defs.mli
src/bindings_refcounted/: dune  torch_refcounted_bindings.ml  type_defs.ml  type_defs.mli
src/c_api/include/: ocamltorch_api.h
src/config/: discover.ml  dune
src/diff_for_review/: dune
src/gen_bindings/: dune  gen.ml
src/gen_stubs/: dune  gen_stubs.ml
src/local_iterators/: dune  list.ml  list.mli
src/refcounted_tests/: dune  optimizer_tests.ml  serialization_tests.ml  test_data.txt  text_helper_tests.ml  torch_refcount_tests.ml  torch_scope_tests.ml  var_store_tests.ml
src/stubs/: dune  torch_bindings.ml  torch_bindings_generated.ml  torch_gen.ml
src/tests/: dune  grad_tests.ml  jit_tests.ml  optimizer_tests.ml  raise.pt  rnn_tests.ml  scalar_tests.ml  serialization_tests.ml  tensor_tests.ml  torch_tests.ml  trace.py  vision_tests.ml  w_buffers.pt
src/toplevel/: dune  torch_toplevel.ml
src/torch/: aoti_runner.ml  aoti_runner.mli  checkpointing.ml  checkpointing.mli  cifar_helper.ml  dataset_helper.ml  dataset_helper.mli  device.ml  device.mli  dune  ivalue.ml  ivalue.mli  layer.ml  layer.mli  mnist_helper.ml  optimizer.ml  profiling.ml  profiling.mli  rnn_intf.ml  scalar.ml  scalar.mli  tensor.ml  tensor.mli  text_helper.ml  text_helper.mli  torch.ml  var_store.ml  var_store.mli
src/torch_refcounted/: aoti_runner.ml  aoti_runner.mli  checkpointing.ml  device.ml  device.mli  dune  layer.ml  layer.mli  optimizer.ml  optimizer.mli  profiling.ml  scalar.ml  scalar.mli  tensor.ml  tensor.mli  text_helper.ml  text_helper.mli  torch_refcounted.ml  var_store.ml  var_store.mli
src/vision/: alexnet.ml  densenet.ml  dune  efficientnet.ml  efficientnet.mli  export_model.py  image.ml  image.mli  imagenet.ml  inception.ml  ml_stb_image.c  ml_stb_image_resize.c  ml_stb_image_write.c  mobilenet.ml  resnet.ml  squeezenet.ml  stb_image.h  stb_image.ml  stb_image.mli  stb_image_resize.h  stb_image_write.h  stb_image_write.mli  torch_vision.ml  vgg.ml
src/wrapper/: c_ffi.ml  c_ffi.mli  device.ml  dune  kind.ml  kind.mli  reduction.ml  torch_api.cpp  torch_api.h  torch_api_generated.cpp  torch_api_generated.cpp.h  torch_api_generated.h  torch_core.ml  torch_stubs.c  torch_stubs.ml  wrapper.ml  wrapper.mli  wrapper_generated.ml  wrapper_generated_intf.ml  wrapper_utils.ml  wrapper_utils.mli
src/wrapper_refcounted/: c_ffi.ml  c_ffi.mli  ctypes_foreign_flat.ml  dune  refcounting.ml  refcounting.mli  torch_api.cpp  torch_api.h  torch_refcounted_core.ml  torch_stubs.c  torch_stubs.ml  wrapper.ml  wrapper.mli  wrapper_utils.ml  wrapper_utils.mli
src/wrapper_types/: device.ml  device.mli  dune  kind.ml  kind.mli  reduction.mli  torch_wrapper_types.ml
