(library
 (foreign_stubs
  (language c)
  (names ml_stb_image ml_stb_image_resize ml_stb_image_write)
  (flags :standard -Wno-unused-parameter -Wno-unused-variable
    -Wno-type-limits -Wno-maybe-uninitialized))
 (name torch_vision)
 (public_name torch.vision)
 (libraries base stdio torch_core torch)
 (preprocess
  (pps ppx_jane)))
