(library
 (foreign_stubs
  (language cxx)
  (names torch_api)
  (flags
   -std=c++17
   -fPIC
   (:include cxx_flags.sexp)))
 (foreign_stubs
  (language c)
  (names torch_stubs torch_stubs_generated))
 (name torch_core)
 (public_name torch.core)
 (c_library_flags :standard -lstdc++)
 (flags
  :standard
  (:include flags.sexp))
 (libraries ctypes.foreign ctypes torch_bindings)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets cxx_flags.sexp flags.sexp)
 (deps ../config/discover.exe)
 (action
  (bash %{deps})))

(rule
 (targets torch_stubs_generated.c torch_stubs_generated.ml)
 (deps ../gen_stubs/gen_stubs.exe)
 (action
  (bash ./%{deps})))
